<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_nome_prova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/nome_prova"
        android:textColor="#B10000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_nome2_prova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/trail_dos_descobrimentos"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_localidade_prova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/localidade_prova"
        android:textColor="#B10000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_localidade2_prova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/belmonte"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_percurso_prova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/percurso"
        android:textColor="#B10000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_percurso2_prova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/trail_curto"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_tipo_prova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/tipo_prova"
        android:textColor="#B10000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_tipo2_prova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/trail"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_data_prova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/data_prova"
        android:textColor="#B10000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_data2_prova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_24_05_2023"
        android:textSize="20sp" />

</LinearLayout>