<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuPrincipalFragment">

    <fragment
        android:id="@+id/MenuPrincipalFragment"
        android:name="pt.ipg.provas.MenuPrincipalFragment"
        android:label="@string/menu_principal_label"
        tools:layout="@layout/fragment_menu_principal">

        <action
            android:id="@+id/action_MenuPrincipalFragment_to_SobreFragment"
            app:destination="@id/SobreFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_listaProvasFragment"
            app:destination="@id/ListaProvasFragment" />
    </fragment>
    <fragment
        android:id="@+id/SobreFragment"
        android:name="pt.ipg.provas.SobreFragment"
        android:label="@string/sobre_fragment_label"
        tools:layout="@layout/fragment_sobre">

        <action
            android:id="@+id/action_SobreFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListaProvasFragment"
        android:name="pt.ipg.provas.ListaProvasFragment"
        android:label="@string/Lista_Provas_Lable"
        tools:layout="@layout/fragment_lista_provas">
        <action
            android:id="@+id/action_listaProvasFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
        <action
            android:id="@+id/action_ListaProvasFragment_to_novaProvaFragment"
            app:destination="@id/novaProvaFragment" />
        <action
            android:id="@+id/action_ListaProvasFragment_to_eliminarProvaFragment"
            app:destination="@id/eliminarProvaFragment" />
    </fragment>
    <fragment
        android:id="@+id/novaProvaFragment"
        android:name="pt.ipg.provas.NovaProvaFragment"
        android:label="@string/nova_prova_label"
        tools:layout="@layout/fragment_nova_prova">
        <action
            android:id="@+id/action_novaProvaFragment_to_ListaProvasFragment"
            app:destination="@id/ListaProvasFragment" />
    </fragment>
    <fragment
        android:id="@+id/eliminarProvaFragment"
        android:name="pt.ipg.provas.EliminarProvaFragment"
        android:label="EliminarProvaFragment" >
        <action
            android:id="@+id/action_eliminarProvaFragment_to_ListaProvasFragment"
            app:destination="@id/ListaProvasFragment" />
    </fragment>
</navigation>